--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "typescript": "^5.1.5"
   },
   "dependencies": {
+    "@prisma/client": "^4.16.1",
     "@slack/bolt": "^3.13.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "openai": "^3.3.0"
   }
 }
